--- a/chapter_probability.tex
+++ b/chapter_probability.tex
@@ -1,6 +1,7 @@
 %!TEX root = main.tex
 
 \chapter{Probability theory}
+\label{chapter:probability}
 
 To understand statistics, it's critical to have a grasp of basic concepts in
 probability, which is an entire branch of mathematics. The central concept in
